[REF] Mysql image for armv7l.

--- a/mysql-devel/docker-compose.yml
+++ b/mysql-devel/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.5'
 services:
   db:
     image: mariadb:5
+    # image: hypriot/rpi-mysql:5.5
     container_name: mysql-devel
     environment:
       MYSQL_ROOT_PASSWORD: secret
